--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -690,7 +690,75 @@ new method.
  Antioquia''.    
 
 \bibliographystyle{mn2e}
-\bibliography{references}
+%\bibliography{references}
+\begin{thebibliography}{}
+
+\bibitem[\protect\citeauthoryear{{Duffy}, {Schaye}, {Kay} \& {Dalla
+  Vecchia}}{{Duffy} et~al.}{2008}]{Duffy2008}
+{Duffy} A.~R.,  {Schaye} J.,  {Kay} S.~T.,    {Dalla Vecchia} C.,  2008,
+  \mnras, 390, L64
+
+\bibitem[\protect\citeauthoryear{{Foreman-Mackey}, {Hogg}, {Lang} \&
+  {Goodman}}{{Foreman-Mackey} et~al.}{2013}]{emcee}
+{Foreman-Mackey} D.,  {Hogg} D.~W.,  {Lang} D.,    {Goodman} J.,  2013, \pasp,
+  125, 306
+
+\bibitem[\protect\citeauthoryear{{Klypin}, {Yepes}, {Gottlober}, {Prada} \&
+  {Hess}}{{Klypin} et~al.}{2014}]{Klypin2014}
+{Klypin} A.,  {Yepes} G.,  {Gottlober} S.,  {Prada} F.,    {Hess} S.,  2014,
+  ArXiv e-prints
+
+\bibitem[\protect\citeauthoryear{{Ludlow}, {Navarro}, {Angulo},
+  {Boylan-Kolchin}, {Springel}, {Frenk} \& {White}}{{Ludlow}
+  et~al.}{2014}]{Ludlow2014}
+{Ludlow} A.~D.,  {Navarro} J.~F.,  {Angulo} R.~E.,  {Boylan-Kolchin} M.,
+  {Springel} V.,  {Frenk} C.,    {White} S.~D.~M.,  2014, \mnras, 441, 378
+
+\bibitem[\protect\citeauthoryear{{Macci{\`o}}, {Dutton} \& {van den
+  Bosch}}{{Macci{\`o}} et~al.}{2008}]{Maccio2008}
+{Macci{\`o}} A.~V.,  {Dutton} A.~A.,    {van den Bosch} F.~C.,  2008, \mnras,
+  391, 1940
+
+\bibitem[\protect\citeauthoryear{{More}, {Kravtsov}, {Dalal} \&
+  {Gottl{\"o}ber}}{{More} et~al.}{2011}]{More2011}
+{More} S.,  {Kravtsov} A.~V.,  {Dalal} N.,    {Gottl{\"o}ber} S.,  2011, \apjs,
+  195, 4
+
+\bibitem[\protect\citeauthoryear{{Mu{\~n}oz-Cuartas}, {Macci{\`o}},
+  {Gottl{\"o}ber} \& {Dutton}}{{Mu{\~n}oz-Cuartas} et~al.}{2011}]{Munoz2011}
+{Mu{\~n}oz-Cuartas} J.~C.,  {Macci{\`o}} A.~V.,  {Gottl{\"o}ber} S.,
+  {Dutton} A.~A.,  2011, \mnras, 411, 584
+
+\bibitem[\protect\citeauthoryear{{Navarro}, {Frenk} \& {White}}{{Navarro}
+  et~al.}{1997}]{NFW}
+{Navarro} J.~F.,  {Frenk} C.~S.,    {White} S.~D.~M.,  1997, \apj, 490, 493
+
+\bibitem[\protect\citeauthoryear{{Navarro}, {Ludlow}, {Springel}, {Wang},
+  {Vogelsberger}, {White}, {Jenkins}, {Frenk} \& {Helmi}}{{Navarro}
+  et~al.}{2010}]{Navarro2010}
+{Navarro} J.~F.,  {Ludlow} A.,  {Springel} V.,  {Wang} J.,  {Vogelsberger} M.,
+  {White} S.~D.~M.,  {Jenkins} A.,  {Frenk} C.~S.,    {Helmi} A.,  2010,
+  \mnras, 402, 21
+
+\bibitem[\protect\citeauthoryear{{Neto}, {Gao}, {Bett}, {Cole}, {Navarro},
+  {Frenk}, {White}, {Springel} \& {Jenkins}}{{Neto} et~al.}{2007}]{Neto2007}
+{Neto} A.~F.,  {Gao} L.,  {Bett} P.,  {Cole} S.,  {Navarro} J.~F.,  {Frenk}
+  C.~S.,  {White} S.~D.~M.,  {Springel} V.,    {Jenkins} A.,  2007, \mnras,
+  381, 1450
+
+\bibitem[\protect\citeauthoryear{{Prada}, {Klypin}, {Cuesta}, {Betancort-Rijo}
+  \& {Primack}}{{Prada} et~al.}{2012}]{Prada2012}
+{Prada} F.,  {Klypin} A.~A.,  {Cuesta} A.~J.,  {Betancort-Rijo} J.~E.,
+  {Primack} J.,  2012, \mnras, 423, 3018
+
+\bibitem[\protect\citeauthoryear{{Riebe}, {Partl}, {Enke}, {Forero-Romero},
+  {Gottl{\"o}ber}, {Klypin}, {Lemson}, {Prada}, {Primack}, {Steinmetz} \&
+  {Turchaninov}}{{Riebe} et~al.}{2013}]{2013AN....334..691R}
+{Riebe} K.,  {Partl} A.~M.,  {Enke} H.,  {Forero-Romero} J.,  {Gottl{\"o}ber}
+  S.,  {Klypin} A.,  {Lemson} G.,  {Prada} F.,  {Primack} J.~R.,  {Steinmetz}
+  M.,    {Turchaninov} V.,  2013, Astronomische Nachrichten, 334, 691
+
+\end{thebibliography}
 
 \end{document}
 
