shorter abstract, updated running title

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -106,8 +106,7 @@
 %=========================================================================
 %		FRONT MATTER
 %=========================================================================
-\title[Halo concentration from the mass profile]{Estimating dark matter
-  halo concentration using the integrated mass profile} 
+\title[Halo concentration via the integrated mass profile]{Estimating dark matter  halo concentration using the integrated mass profile} 
 \author[C.N. Poveda-Ruiz, J.E. Forero-Romero, J.C. Mu\~noz-Cuartas]{
 \parbox[t]{\textwidth}{\raggedright 
   C. N. Poveda-Ruiz \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
@@ -129,7 +128,6 @@ dark matter halos using the integrated mass profile.
 The method uses the full particle information without any binning,
 making it reliable in cases when low numerical resolution becomes a
 limitation for other methods.   
-Additionally, the algorithm is straightforward to implement.  
 We test the performance of this method by estimating halo
 concentration both on mock and N-body halos. 
 We compare these results against two other methods:
@@ -137,13 +135,6 @@ maximum radial velocity measurements and radial particle binning.
 Tests on the mock halos show that the accuracy of the new method to
 recover known input concentrations varies with halo resolution,
 outperforming the other two methods. 
-For halos sampled with $20$ particles the new method recovers the input
-concentration with $10\%$ accuracy, while for the maximum radial
-velocity method it is on the order of $20\%$ while density profile
-methods just fail at such low resolution limits.
-For halos with $2\times 10^4$ particles the new method achieves a recovery
-accuracy of $0.01\%$ while the velocity and density profile methods
-achieve $0.1\%$ and $1\%$, respectively. 
 We also measure the mass-concentration relationship on N-body
 data. 
 We find that in the probed mass range ($10^{12}\hMsun <
