new concentration plot

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -512,7 +512,7 @@ quantified by a large $\avg{|D|}$.
 
 \begin{figure}
 \begin{center}
-  \includegraphics[width=0.50\textwidth]{concentration.pdf}
+  \includegraphics[width=0.50\textwidth]{concentration_bolshoi.pdf}
 \end{center}
 \vspace{-0.5cm}
 \caption{Mass-concentration relationship for the three different
