--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -439,23 +439,37 @@ mass-concentration relationship.
     \label{fig:error}}
 \end{figure}
 
-
-
-\label{sec:data}
 \begin{figure*}
-  \begin{center}
-    \includegraphics[width=0.32\textwidth]{conc_mass_vel.pdf}
-    \includegraphics[width=0.32\textwidth]{conc_mass_dens.pdf}
-    \includegraphics[width=0.32\textwidth]{conc_dens_vel.pdf}
-  \end{center}
+\begin{center}
+  \includegraphics[width=0.47\textwidth]{avg_foff_bolshoi.pdf}
+  \includegraphics[width=0.45\textwidth]{stddev_foff_bolshoi.pdf}
+\end{center}
 \vspace{-0.5cm}
-  \caption{Comparison between the concentrations measured by the new 
-    method and the maximum velocity (left) and density (middle)
-    methods. The solid line indicates the equal value between the two
-    techniques. The dashed line shows the upper 15 per cent difference
-    between two methods.
-  \label{fig:comparison}}
+\caption{Average value of the relative error in the concentration
+  estimate, $\avg{|D|}$, as a function of the particle number $N$ in
+  the set of mock halos. Different symbols represent different
+  methods. The new method provides the most accurate estimate at fixed
+  particle number.  
+    \label{fig:error}}
 \end{figure*}
+
+
+
+%\label{sec:data}
+%\begin{figure*}
+%  \begin{center}
+%    \includegraphics[width=0.32\textwidth]{conc_mass_vel.pdf}
+%    \includegraphics[width=0.32\textwidth]{conc_mass_dens.pdf}
+%    \includegraphics[width=0.32\textwidth]{conc_dens_vel.pdf}
+%  \end{center}
+%\vspace{-0.5cm}
+%  \caption{Comparison between the concentrations measured by the new 
+%    method and the maximum velocity (left) and density (middle)
+%    methods. The solid line indicates the equal value between the two
+%    techniques. The dashed line shows the upper 15 per cent difference
+%    between two methods.
+%  \label{fig:comparison}}
+%\end{figure*}
 
 
 
@@ -510,21 +524,6 @@ $\left|{\cal{H}}\right|$ is the number of haloes in ${\cal{H}}$.
 A large discrepancy between the estimated and input concentrations are
 quantified by a large $\avg{|D|}$.
 
-\begin{figure}
-\begin{center}
-  \includegraphics[width=0.50\textwidth]{concentration_bolshoi.pdf}
-\end{center}
-\vspace{-0.5cm}
-\caption{Mass-concentration relationship for the three different
-  methods used on the same cosmological N-body data. 
-  All halos are used regardless of their relaxation state.
-  The lines correspond to the median concentration values in each mass bin.
-  The shaded region presents 10 and 90 per cent spread.
-  For clarity we only show the spread for the concentrations estimated
-  using the new method. The other two methods have a similar spread. The
-  dotted line corresponds to fits reported by \citep{Prada2012}.
-  \label{fig:concentration}}
-\end{figure}
 
 
 Figure \ref{fig:error} shows the behaviour of $\avg{|D|}$ as a function of
@@ -555,6 +554,25 @@ with number of particles below $\sim 200$ and an intermediate accuracy
 between the other two methods for a high particle number. 
 
 \subsection{Halos from a cosmological simulation}
+
+
+\begin{figure*}
+\begin{center}
+  \includegraphics[width=0.45\textwidth]{concentration_bolshoi.pdf}
+  \includegraphics[width=0.45\textwidth]{concentration_bolshoi_corrected.pdf}
+\end{center}
+\vspace{-0.5cm}
+\caption{Mass-concentration relationship for the three different
+  methods used on the same cosmological N-body data. 
+  All halos are used regardless of their relaxation state.
+  The lines correspond to the median concentration values in each mass bin.
+  The shaded region presents 10 and 90 per cent spread.
+  For clarity we only show the spread for the concentrations estimated
+  using the new method. The other two methods have a similar spread. The
+  dotted line corresponds to fits reported by \citep{Prada2012}.
+  \label{fig:concentration}}
+\end{figure*}
+
 
 The results presented in the previous section show that in an
 idealized setup (pure NFW density profiles, perfect spherical halos in
@@ -644,6 +662,8 @@ can be fit by the following relationship
 which has a similar power value compared to the $-0.075$ reported by
 \citep{Prada2012}, while the normalization is $\sim 20\%$ lower
 compared to the $7.28$ value reported by the same authors. 
+
+
 
 \section{Conclusions}
 \label{sec:conclusions}
